# trik-vidtranscode-cv

./: .gitignore  README.md  config.bld  makefile  package.bld  trik_vidtranscode_cv.h
arm_client/: v4l2-cv.pro
arm_client/include/internal/: codecengine.h  image.h  v4l2.h
arm_client/libcodecengine-client/: .gitignore  Makefile  Makefile.am  Makefile.in  Makefile.plain  aclocal.m4  config.h.in  configure  configure.ac  libcodecengine-client.pc.in
arm_client/libcodecengine-client.plain/: Makefile.plain
arm_client/libcodecengine-client/include/libcodecengine-client/: codecengine-client.h  memory.h
arm_client/libcodecengine-client/src/: main.c  memory.c
arm_client/libcodecengine-client/tests/: test_cmem_alloc.c
arm_client/src/: codecengine.cpp  main.cpp  v4l2.cpp
dsp_server/: config.bld  makefile  server.cfg
include/internal/: cv_algorithm.hpp  cv_ball_detector.hpp  cv_ball_detector_fast.hpp  cv_ball_detector_ref.hpp  cv_ball_detector_reference.hpp  cv_ball_detector_seq.hpp  cv_ball_detector_seqpass.hpp  cv_ball_detector_singlepass.hpp  vidtranscode_cv.h
src/: vidtranscode_cv.cpp  vidtranscode_cv_fxns.c
